Generate Word Templates update

--- a/read-khan-academy-2.ipynb
+++ b/read-khan-academy-2.ipynb
@@ -26,15 +26,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Script Variables\n",
     "\n",
     "# subject = 'High school statistics'\n",
-    "subject = 'Statistics and probability'\n",
-    "# subject = 'AP®︎/College Statistics'\n",
+    "# subject = 'Statistics and probability'\n",
+    "subject = 'AP®︎/College Statistics'\n",
     "\n",
     "# Target directory\n",
     "root_dir = 'd:\\\\Primeway\\\\Treinamento\\\\Data Science & AI\\\\Statistics'\n",
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -74,34 +74,34 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>393</th>\n",
-       "      <td>Unit 15: Advanced regression (inference and tr...</td>\n",
-       "      <td>Nonlinear regression</td>\n",
-       "      <td>Transforming nonlinear data</td>\n",
+       "      <th>252</th>\n",
+       "      <td>Unit 13: Inference for quantitative data: slopes</td>\n",
+       "      <td>Testing for the slope of a regression model</td>\n",
+       "      <td>Using a P-value to make conclusions in a test ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>394</th>\n",
-       "      <td>Unit 15: Advanced regression (inference and tr...</td>\n",
-       "      <td>Nonlinear regression</td>\n",
-       "      <td>Worked example of linear regression using tran...</td>\n",
+       "      <th>253</th>\n",
+       "      <td>Unit 13: Inference for quantitative data: slopes</td>\n",
+       "      <td>Testing for the slope of a regression model</td>\n",
+       "      <td>Using a confidence interval to test slope</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>395</th>\n",
-       "      <td>Unit 16: Analysis of variance (ANOVA)</td>\n",
-       "      <td>Analysis of variance (ANOVA)</td>\n",
-       "      <td>ANOVA 1: Calculating SST (total sum of squares)</td>\n",
+       "      <th>254</th>\n",
+       "      <td>Unit 14: Prepare for the 2022 AP®︎ Statistics ...</td>\n",
+       "      <td>Prepare for the exam</td>\n",
+       "      <td>Significance test for a proportion free respon...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>396</th>\n",
-       "      <td>Unit 16: Analysis of variance (ANOVA)</td>\n",
-       "      <td>Analysis of variance (ANOVA)</td>\n",
-       "      <td>ANOVA 2: Calculating SSW and SSB (total sum of...</td>\n",
+       "      <th>255</th>\n",
+       "      <td>Unit 14: Prepare for the 2022 AP®︎ Statistics ...</td>\n",
+       "      <td>Prepare for the exam</td>\n",
+       "      <td>Significance test for a proportion free respon...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>397</th>\n",
-       "      <td>Unit 16: Analysis of variance (ANOVA)</td>\n",
-       "      <td>Analysis of variance (ANOVA)</td>\n",
-       "      <td>ANOVA 3: Hypothesis test with F-statistic</td>\n",
+       "      <th>256</th>\n",
+       "      <td>Unit 14: Prepare for the 2022 AP®︎ Statistics ...</td>\n",
+       "      <td>Prepare for the exam</td>\n",
+       "      <td>Free response example: Significance test for a...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -109,28 +109,28 @@
       ],
       "text/plain": [
        "                                                  unit  \\\n",
-       "393  Unit 15: Advanced regression (inference and tr...   \n",
-       "394  Unit 15: Advanced regression (inference and tr...   \n",
-       "395              Unit 16: Analysis of variance (ANOVA)   \n",
-       "396              Unit 16: Analysis of variance (ANOVA)   \n",
-       "397              Unit 16: Analysis of variance (ANOVA)   \n",
+       "252   Unit 13: Inference for quantitative data: slopes   \n",
+       "253   Unit 13: Inference for quantitative data: slopes   \n",
+       "254  Unit 14: Prepare for the 2022 AP®︎ Statistics ...   \n",
+       "255  Unit 14: Prepare for the 2022 AP®︎ Statistics ...   \n",
+       "256  Unit 14: Prepare for the 2022 AP®︎ Statistics ...   \n",
        "\n",
-       "                            group  \\\n",
-       "393          Nonlinear regression   \n",
-       "394          Nonlinear regression   \n",
-       "395  Analysis of variance (ANOVA)   \n",
-       "396  Analysis of variance (ANOVA)   \n",
-       "397  Analysis of variance (ANOVA)   \n",
+       "                                           group  \\\n",
+       "252  Testing for the slope of a regression model   \n",
+       "253  Testing for the slope of a regression model   \n",
+       "254                         Prepare for the exam   \n",
+       "255                         Prepare for the exam   \n",
+       "256                         Prepare for the exam   \n",
        "\n",
        "                                                lesson  \n",
-       "393                        Transforming nonlinear data  \n",
-       "394  Worked example of linear regression using tran...  \n",
-       "395    ANOVA 1: Calculating SST (total sum of squares)  \n",
-       "396  ANOVA 2: Calculating SSW and SSB (total sum of...  \n",
-       "397          ANOVA 3: Hypothesis test with F-statistic  "
+       "252  Using a P-value to make conclusions in a test ...  \n",
+       "253          Using a confidence interval to test slope  \n",
+       "254  Significance test for a proportion free respon...  \n",
+       "255  Significance test for a proportion free respon...  \n",
+       "256  Free response example: Significance test for a...  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,14 +154,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1194\n"
+      "771\n"
      ]
     }
    ],
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,23 +242,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "d:\\Primeway\\Treinamento\\Data Science & AI\\Statistics\\Statistics and probability\n"
+      "d:\\Primeway\\Treinamento\\Data Science & AI\\Statistics\\AP®︎College Statistics\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'d:\\\\Primeway\\\\Treinamento\\\\Data Science & AI\\\\Statistics\\\\Statistics and probability'"
+       "'d:\\\\Primeway\\\\Treinamento\\\\Data Science & AI\\\\Statistics\\\\AP®︎College Statistics'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +269,7 @@
     "os.chdir(root_dir)\n",
     "parent_dir = os.getcwd()\n",
     "\n",
-    "path = os.path.join(parent_dir, subject)\n",
+    "path = os.path.join(parent_dir, re.sub(r'[\\\\/*?\"<>|]',\"\", subject))\n",
     "print(path)\n",
     "\n",
     "# Create the directory\n",
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
